turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: not found: value rule
    		(rule(state)(couleurActuelle)(MVT_SUIVANT)) match{
                 ^Turmite:25: error: not found: value i
   	i=0
        ^Turmite:26: error: not found: value colors
   	while (getCouleurSol!=colors(i)){
                              ^Turmite:27: error: not found: value i
		i=i+1
                ^Turmite:29: error: not found: value i
	return i
               ^Turmite:32: error: not found: value rule
		if(rule(state)(couleurActuelle)(ETAT_SUIVANT)==0){
                   ^Turmite:41: error: not found: value rule
		setCouleurBrosse(rule(state)(couleurActuelle)(CLR_SUIVANT))
                                 ^